<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_cooking_home"
    android:fillViewport="false"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="25dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:padding="4dp"
            android:src="@drawable/ic_back_gray"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_foodie" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/login_to_ur_recipe_account"
            android:textColor="@color/darkblack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_rightLeft_margin"
            android:layout_marginRight="@dimen/activity_rightLeft_margin"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingLeft="4dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="@dimen/activity_rightLeft_margin"
            android:layout_marginRight="@dimen/activity_rightLeft_margin"
            android:background="@color/viewBackground" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_rightLeft_margin"
            android:layout_marginRight="@dimen/activity_rightLeft_margin"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="4dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_rightLeft_margin"
            android:layout_marginRight="@dimen/activity_rightLeft_margin"
            android:background="@color/viewBackground" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_button"
            android:paddingBottom="15dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingTop="15dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_forgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@color/darkblack"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/lv_fblogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/bg_fb_button"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_facebook" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/fbLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/loginWithFacebook"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/dont_have_account"
            android:textColor="@color/darkblack"
            android:textSize="18sp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/ads"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer" />
    </LinearLayout>
</ScrollView>
