<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dp"
    android:background="@drawable/bg_plain"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:padding="7dp"
            android:src="@drawable/ic_back_gray" />

        <TextView
            android:id="@+id/textView2"
            android:textAllCaps="true"
            android:textColor="@color/colorAppName_cd4a2c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/store"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/adpack"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:visibility="visible"
            android:background="@android:color/transparent"
            android:text="@string/adpack"
            android:textSize="16sp" />
        <Button
            android:id="@+id/remove_ads"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:text="0.99€"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/recipe"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:visibility="visible"
            android:background="@android:color/transparent"
            android:text="@string/recipe"
            android:textSize="16sp" />
        <Button
            android:id="@+id/premium_recepies"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:text="1.99€"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ad_recipe"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:visibility="visible"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/ad_recipe"
            android:textSize="16sp" />
        <Button
            android:id="@+id/ad_premium_recepies"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:text="2.99€"
            android:textColor="@color/white"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/activity_rightLeft_margin"
        android:layout_marginRight="@dimen/activity_rightLeft_margin"
        android:background="@color/viewBackground" />

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_rightLeft_margin"
        android:layout_marginRight="@dimen/activity_rightLeft_margin"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="4dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/activity_rightLeft_margin"
        android:layout_marginRight="@dimen/activity_rightLeft_margin"
        android:background="@color/viewBackground" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/activity_rightLeft_margin"
        android:layout_marginRight="@dimen/activity_rightLeft_margin"
        android:imeOptions="actionDone"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="4dp"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/activity_rightLeft_margin"
        android:layout_marginRight="@dimen/activity_rightLeft_margin"
        android:background="@color/viewBackground" />

    <Button
        android:id="@+id/btn_password_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="18dp"
        android:visibility="gone"
        android:layout_marginTop="58dp"
        android:background="@drawable/bg_button"
        android:paddingBottom="13dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="13dp"
        android:text="@string/submit"
        android:textSize="15sp"
        android:textColor="@color/white" />

</LinearLayout>
