<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bg_cooking_home"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        tools:context="com.iblinfotech.foodierecipe.LogInActivity">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:padding="4dp"
            android:src="@drawable/ic_back_gray"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_foodie" />

        <TextView
            android:id="@+id/tv_createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/createAccount"
            android:textColor="@color/darkblack"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/default_profile"
                app:civ_border_color="@color/outerdrawerCircle"
                app:civ_border_width="4dp" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_user_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="3.5dp"
                android:src="@drawable/ic_user_image"
                app:civ_border_color="@color/drawerCircle"
                app:civ_border_width="4dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_signup"
                android:textColor="@color/darkblack"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="text" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="@dimen/activity_rightLeft_margin"
            android:layout_marginRight="@dimen/activity_rightLeft_margin"
            android:background="@color/viewBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tv_emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/darkblack"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_emailAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="@dimen/activity_rightLeft_margin"
            android:layout_marginRight="@dimen/activity_rightLeft_margin"
            android:background="@color/viewBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordsignUp"
                android:textColor="@color/darkblack"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="@dimen/activity_rightLeft_margin"
            android:layout_marginRight="@dimen/activity_rightLeft_margin"
            android:background="@color/viewBackground" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="15sp"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/male"
                    android:textColor="@color/darkblack" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/female"
                    android:textColor="@color/darkblack" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:paddingBottom="15dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingTop="15dp"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:text="@string/already_have_account"
            android:textColor="@color/darkblack"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="@dimen/activity_rightLeft_margin"
            android:layout_marginRight="@dimen/activity_rightLeft_margin"
            />
    </LinearLayout>
</ScrollView>