<?xml version="1.0" encoding="utf-8"?>
<com.daprlabs.cardstack.SwipeFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipedeck="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/swipeActivityBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="top|right"
            android:layout_marginRight="25dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_close_white" />

        <TextView
            android:id="@+id/tv_discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-25dp"
            android:text="@string/discover"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="~"
            android:textAlignment="center"
            android:textColor="@color/sidebarFontColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_noIdea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:text="@string/no_idea_today"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/sidebarFontColor"
            android:textSize="14sp" />
    </LinearLayout>

    <com.iblinfotech.foodierecipe.view.SwipeDeck
        android:id="@+id/swipe_deck"
        android:layout_width="wrap_content"
        android:layout_height="480dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:paddingTop="15dp"
        swipedeck:card_spacing="50dp"
        swipedeck:max_visible="3"
        swipedeck:opacity_end="1"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        swipedeck:render_above="false"
        swipedeck:rotation_degrees="15" />

    <TextView
        android:id="@+id/tv_swipeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:text="@string/swipe_for_show_recipe"
        android:textAlignment="center"
        android:textColor="@color/sidebarFontColor"
        android:textSize="15dp" />

    <!--<Button-->
    <!--android:id="@+id/button3"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="bottom"-->
    <!--android:layout_marginBottom="30dp"-->
    <!--android:text="add card"-->
    <!--android:visibility="visible" />-->


</com.daprlabs.cardstack.SwipeFrameLayout>



